syntax = "proto3";

option csharp_namespace = "Saes.Protos.ModelServices";

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "models.proto";
import "statuses.proto";
package journalTechnicalRecord;

// NOT_IMPLEMENTED

service JournalTechnicalRecordService {
    rpc Search (JournalTechnicalRecordLookup) returns (JournalTechnicalRecordLookupResponse);
    rpc Add (JournalTechnicalRecordDataRequest) returns (JournalTechnicalRecordLookupResponse);
    rpc Remove (JournalTechnicalRecordLookup) returns (statuses.StatusResponse);
    rpc Edit (JournalTechnicalRecordDataRequest) returns (statuses.StatusResponse);
}

message JournalTechnicalRecordLookup
{
    google.protobuf.Int32Value OrganizationID = 1;

	google.protobuf.Int32Value JournalTechnicalRecordID = 2;

	google.protobuf.StringValue TypeAndSerialUsedCPI = 3;
	google.protobuf.StringValue RecordOnMaintenanceCPI = 4;

	google.protobuf.Int32Value KeyDocumentTypeID = 5;

	google.protobuf.StringValue SerialCPIAndKeyDocumentInstanceNumber = 6;
	google.protobuf.StringValue NumberOneTimeKeyCarrierCPIZoneCryptoKeysInserted = 7;

	google.protobuf.Timestamp DestructionDate = 8;
	google.protobuf.StringValue ActNumber = 9;
	google.protobuf.StringValue Note = 10;
}

// Add or Edit
message JournalTechnicalRecordDataRequest
{
    google.protobuf.Int32Value OrganizationID = 1;

	google.protobuf.Int32Value JournalTechnicalRecordID = 2;
	google.protobuf.Timestamp Date = 3;

	google.protobuf.StringValue TypeAndSerialUsedCPI = 4;
	google.protobuf.StringValue RecordOnMaintenanceCPI = 5;

	google.protobuf.Int32Value KeyDocumentTypeID = 6;

	google.protobuf.StringValue SerialCPIAndKeyDocumentInstanceNumber = 7;
	google.protobuf.StringValue NumberOneTimeKeyCarrierCPIZoneCryptoKeysInserted = 8;

	google.protobuf.Timestamp DestructionDate = 9;
	google.protobuf.StringValue ActNumber = 11;
	google.protobuf.StringValue Note = 12;

	models.FileDto SignFileDto = 13;
}

// Comment
message JournalTechnicalRecordLookupResponse
{
    repeated models.JournalTechnicalRecordDto data = 1;
}