syntax = "proto3";

option csharp_namespace = "Saes.Protos.ModelServices";

import "google/protobuf/wrappers.proto";
import "models.proto";
import "statuses.proto";

package user;

// NOT_IMPLEMENTED

service UserService {
    rpc Search (UserLookup) returns (UserLookupResponse);
    rpc Add (UserDataRequest) returns (UserLookupResponse);
    rpc Remove (UserLookup) returns (statuses.StatusResponse);
    rpc Edit (UserDataRequest) returns (statuses.StatusResponse);
    rpc GetRights (UserGetRightsRequest) returns (UserGetRightsResponse);
    rpc UpdateTwoFactorToken (UserLookup) returns (UpdateTwoFactorTokenResponse);
}

message UserLookup
{
    google.protobuf.Int32Value userId = 1;
    google.protobuf.StringValue login = 2;
    google.protobuf.Int32Value userRoleId = 3;
    google.protobuf.StringValue userRoleName = 4;
    google.protobuf.BoolValue twoFactorEnabled = 5;
}

message UserGetRightsRequest
{
    google.protobuf.Int32Value userId = 1;
    google.protobuf.StringValue login = 2;
    google.protobuf.Int32Value userRoleId = 3;
    google.protobuf.StringValue userRoleName = 4;
    google.protobuf.BoolValue twoFactorEnabled = 5;
}

// Add or Edit
message UserDataRequest
{
    google.protobuf.Int32Value userId = 1;
    google.protobuf.StringValue login = 2;
    google.protobuf.Int32Value userRoleId = 3;
    google.protobuf.StringValue password = 4;
    google.protobuf.BoolValue twoFactorEnabled = 5;
}

// Comment
message UserLookupResponse
{
    repeated models.UserDto data = 1;
}

message UserGetRightsResponse
{
    repeated string data = 1;
}

message UpdateTwoFactorTokenResponse
{
    string token = 1;
    string UriToken = 2;
}